Update response for auth
